2008-06-16  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	When there is not enough space in disk when writing a chunk of data,
	aria2 now prints the message to the console to warn user and aborts
	its download. Not all downloads are canceled because some downloads
	may use another disk or partition. BUG#1640332
	* src/AbstractDiskWriter.cc
	* src/PeerAbstractCommand.cc
	* src/PeerAbstractCommand.h: Added onFailure() function for override.
	* src/PeerInteractionCommand.cc: In onFailure(), call RequestGroup::
	setHaltRequested(true) to cancel download.
	* src/PeerInteractionCommand.h
	
2008-06-16  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Applied Ross's aria2-0.13.2+1-mingw-5.patch, which changes the type of
	socket from int to sock_t as sockets are unsigned in Windows.
	For AsyncNameResolver, DownloadEngine, I did additional modification
	for the portion of the code changed according to epoll support.
	I defined sock_t in a2netcompat.h to use sock_t without including
	SocketCore.h.
	* src/AsyncNameResolver.cc
	* src/AsyncNameResolver.h
	* src/DownloadEngine.cc
	* src/DownloadEngine.h
	* src/SocketCore.cc
	* src/SocketCore.h
	* src/a2netcompat.h

2008-06-16  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Applied Ross's aria2-0.13.2+1-mingw-4.patch. With this change, all
	changes in the patch were applied.
	* test/DHTConnectionImplTest.cc: Fixed unit test error in MinGW.
	* test/DefaultPieceStorageTest.cc: Fixed unit test error in MinGW.
	* test/PeerMessageUtilTest.cc: Fixed unit test error in MinGW.
	
2008-06-16  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Applied Ross's aria2-0.13.2+1-mingw-4.patch. In this change,
	a2io.h and common.h were modified.
	* src/a2io.h: Changed seek/stat/tell calls to use 64 bit versions in
	MinGW.
	* src/common.h: Changed off_t to 64 bit in MinGW.

2008-06-16  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Applied Ross's aria2-0.13.2+1-mingw-4.patch. In this commit,
	only a2netcompat.h is modified.