@@ -1,3 +1,9 @@
+2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Moved the call setWriteCheckSocket inside the previous clause to reduce
+	the number of socket to watch out.
+	* src/PeerInteractionCommand.cc
+
 2008-06-16  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	When there is not enough space in disk when writing a chunk of data,
